# resize-rootfs

./: .SRCINFO  .gitignore  PKGBUILD  meson.build  resize-rootfs.service  resize.sh  test.sh
resize-rootfs/: exec.cpp  exec.h  fdisk.cpp  fdisk.h  main.cpp  mount.cpp  mount.h  process.cpp  process.h  readable.cpp  readable.h  utils.cpp  utils.h
